longhorn/longhorn-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.teklogi.systems`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 8000
